# LogiVOC

./: .env.example  .gitmodules  README.md  docker-compose.yml  run_e2e.sh  test_data.csv  upload_test.py
backend/: Dockerfile  patch_mock.py  patch_mock2.py  patch_nodes.py  pyproject.toml  test_llm.py
backend/alembic/: env.py
backend/alembic/versions/: 4a3dc4f00e0a_workspace_enhancement_models.py  6bf941f8a922_initial_migration.py  6e19e5eb2333_phase_2_additions.py  7907dafdd076_add_hashed_password_and_vector.py  8bdfe9bb4af1_add_structured_data_to_wiki.py  f080ea1f2c18_add_description_to_category.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/routers/: __init__.py  admin.py  auth.py  categories.py  graph.py  mcp.py  search.py  stats.py  tasks.py  (+1 more)
backend/app/core/: __init__.py  database.py
backend/app/crud/: __init__.py  crud_category.py  crud_user.py  crud_wiki.py
backend/app/models/: __init__.py  category.py  template.py  user.py  wiki.py
backend/app/pipeline/: __init__.py  edges.py  graph.py  nodes.py  state.py
backend/app/schemas/: __init__.py  admin.py  auth.py  category.py  document.py  search.py  stats.py  template.py  user.py  wiki.py
backend/app/services/: admin_service.py  document_parser.py  document_service.py  stats_service.py  wiki_service.py
backend/app/worker/: __init__.py  celery_app.py
backend/tests/: conftest.py  test_korean_output.py  test_login_payload.py  test_phase3.py  test_pipeline_structure.py  test_search_stats.py  test_upload_security.py  test_wiki_verify.py
(+60 files in other folders)
