[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "azure-ai-formrecognizer>=3.3.3",
    "azure-core>=1.41.0",
    "celery>=5.6.3",
    "fastapi[all]>=0.136.3",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=0.3.6",
    "langgraph>=1.2.2",
    "openai>=2.38.0",
    "pandas>=3.0.3",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "redis>=8.0.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.50",
    "tabulate>=0.10.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
